Small changes in design

--- a/Angular5/src/app/pages/sale-detail/sale-detail.component.html
+++ b/Angular5/src/app/pages/sale-detail/sale-detail.component.html
@@ -61,7 +61,7 @@
 					</button>
 				</div>
 			</div>
-			<p *ngIf="!me" class="lead text-center my-5">Veuillez vous connecter pour acheter.</p>
+			<p *ngIf="!me" class="lead text-center my-5 red-text">Veuillez vous connecter pour acheter.</p>
 			<table class="table align-middle">
 				<!--
 				<tr>
