--- a/Angular5/src/app/pages/pages.component.html
+++ b/Angular5/src/app/pages/pages.component.html
@@ -38,6 +38,6 @@
 
 <footer class="footer fixed-bottom bg-white">
 	<p class="container my-2 text-center">
-		Made with <i class="fa fa-heart" aria-hidden="true"></i> by SiMDE. <a routerLink="/about">Contact</a>
+		Made with <i class="fa fa-heart" aria-hidden="true"></i> by SiMDE. <a href="mailto:simde@assos.utc.fr">Contact</a>
 	</p>
 </footer>
