--- a/Angular5/src/app/pages/sales/sales.component.html
+++ b/Angular5/src/app/pages/sales/sales.component.html
@@ -18,7 +18,7 @@
 		<div class="row mb-4 justify-content-center">
 			<div *ngFor="let sale of sales" class="py-3 col-xl-3 col-md-4 col-sm-6 animated fadeInRight">
 				<div class="card card-image view hm-white-slight waves-light" mdbRippleRadius
-					style="background-image: url('/assets/sdf.jpg'); background-size: cover;">
+					style="background-image: url('./assets/sdf.jpg'); background-size: cover;">
 					<div class="card-body text-white rgba-black-strong d-flex align-items-center py-5 px-4">
 						<div>
 							<h3 class="card-title"><strong>{{ sale.name }}</strong></h3>
