--- a/Angular5/src/app/pages/order-detail/order-detail.component.html
+++ b/Angular5/src/app/pages/order-detail/order-detail.component.html
@@ -23,13 +23,15 @@
 			</p>
 		</div>
 		<div *ngFor="let orderline of order?.orderlines" class="py-3">
-			<h3>{{ orderline.item.name }} <span *ngIf="orderline.quantity>1">(x{{ orderline?.quantity }})</span></h3>
-			<div *ngFor="let orderlineitem of orderline.orderlineitems" class="row py-1 hoverable">
-				<div class="col-12 d-none">{{ orderlineitem.id }}</div>
-				<div *ngFor="let orderlinefield of orderlineitem.orderlinefields" class="md-form col-md-3 my-2">
-						<span>{{ orderlinefield.name }}</span>
-						<input type="{{ mapFieldType(orderlinefield.type) }}" id="{{ orderlinefield.id }}"
-							class="form-control mb-1" [disabled]="!orderlinefield.editable" [(ngModel)]="orderlinefield.value">
+			<div *ngIf="orderline.quantity>0">
+				<h3>{{ orderline.item.name }} <span *ngIf="orderline.quantity>1">(x{{ orderline?.quantity }})</span></h3>
+				<div *ngFor="let orderlineitem of orderline.orderlineitems" class="row py-1 hoverable">
+					<div class="col-12 d-none">{{ orderlineitem.id }}</div>
+					<div *ngFor="let orderlinefield of orderlineitem.orderlinefields" class="md-form col-md-3 my-2">
+							<span>{{ orderlinefield.name }}</span>
+							<input type="{{ mapFieldType(orderlinefield.type) }}" id="{{ orderlinefield.id }}"
+								class="form-control mb-1" [disabled]="!orderlinefield.editable" [(ngModel)]="orderlinefield.value">
+					</div>
 				</div>
 			</div>
 		</div>
