--- a/Angular5/src/app/pages/sale-detail/sale-detail.component.html
+++ b/Angular5/src/app/pages/sale-detail/sale-detail.component.html
@@ -1,4 +1,4 @@
-<main class="container p-5">
+<main class="container py-5 px-3 px-md-5">
 	<!-- <pre class="pre-scrollable">{{ cart | json}}</pre> -->
 
 	<div *ngIf="loading; else saleReady">
@@ -62,6 +62,7 @@
 				</div>
 			</div>
 			<p *ngIf="!me" class="lead text-center my-5 red-text">Veuillez vous connecter pour acheter.</p>
+			<div class="table-responsive">
 			<table class="table align-middle">
 				<!--
 				<tr>
@@ -77,12 +78,13 @@
 						<div class="md-form my-0">
 							<input mdbInputDirective type="number" class="form-control my-0" [class.disabled]="!me || hasOngoingOrder"
 								data-error="wrong" data-success="valid" [(ngModel)]="cart[item.id].quantity"
-								min="0" max="{{ item.max_per_user }}" value="0">
+								min="0" max="{{ item.max_per_user }}" value="0" style="width: 50px;">
 						</div>
 					</td>
-						
 				</tr>
 			</table>
+			</div>
+
 		</div>
 
 		<ng-template #noItem>
